# LookingGlassVTKModule

./: CMakeLists.txt  FetchFromUrl.cmake  FetchHoloPlayCore.cmake  FetchVTKExternalModule.cmake  FindHoloPlayCore.cmake  README.md  pyproject.toml  setup.py  vtk.module  vtkCocoaLookingGlassRenderWindow.h  vtkCocoaLookingGlassRenderWindow.mm  vtkLookingGlassInterface.cxx  vtkLookingGlassInterface.h  vtkLookingGlassPass.cxx  vtkLookingGlassPass.h  vtkLookingGlassRenderWindowImpl.h  vtkWin32LookingGlassRenderWindow.h  vtkXLookingGlassRenderWindow.cxx  vtkXLookingGlassRenderWindow.h
.github/scripts/: cibw_before_build.sh  install.sh  linux_repair_wheel.py  utils.py
.github/workflows/: build_wheels.yml
CMake/: vtkrenderinglookingglass-config.cmake.in
Examples/Python/: .gitignore  change_devices.py  custom_interaction.py  quilt_image.py  quilt_movie.py  vtkLookingGlassPythonDemo.ipynb
Examples/Python/cinematic_rendering/: head_and_neck_animation.py  head_and_neck_front.py  head_and_neck_side.py  thorax_kidneys.py
Source/: CMakeLists.txt  FindHoloPlayCore.cmake  vtk.module  vtkCocoaLookingGlassRenderWindow.h  vtkCocoaLookingGlassRenderWindow.mm  vtkLookingGlassInterface.cxx  vtkLookingGlassPass.h  vtkLookingGlassRenderWindowImpl.h  vtkWin32LookingGlassRenderWindow.cxx  vtkXLookingGlassRenderWindow.h
Source/Testing/Cxx/: TestDragon.cxx  TestLookingGlassPass.cxx
Testing/Cxx/: CMakeLists.txt  TestDragon.cxx
Testing/Python/: test_import.py
